--- a/_talks/2018-03-07-SIAM-PP18.md
+++ b/_talks/2018-03-07-SIAM-PP18.md
@@ -1,16 +1,14 @@
 ---
-title: "The Trilinos Project Exascale Roadmap"
+title: "Parallel Programming Models, Algorithms and Frameworks for Extreme Computing"
 collection: talks
 type: "Talk"
-permalink: /talks/2017-06-26-PASC-Trilinos
-venue: "Platform for Advanced Scientific Computing (PASC)"
-date: 2017-06-26
-location: "Lugano, Switzerland"
+permalink: /talks/2018-03-07-SIAM-PP18
+venue: "SIAM Conference on Parallel Computing (PP18)"
+date: 2018-03-07
+location: "Tokyo, Japan"
 ---
 
-[Slides available here](https://maherou.github.io/files/slides/PASC-ExaTrilinos.pdf)
+[Main Conference Website](https://www.siam.org/meetings/pp18/)
 
-Computational Science and Engineering (CSE) is effective to the extent it contributes to overall scientific and engineering pursuits.  Its contributions are most tangible when delivering concrete scientific and engineering results via modeling, simulation and analysis.  At the same time, delivery of CSE results is impacted by how we develop and support the ecosystem that produced these results, including, in particular, software and people.  While delivering results is the ultimate goal of our CSE efforts, the shortest path to results is often not the most productive and sustainable.
-
-In this presentation we discuss elements that impact the effectiveness of CSE efforts, beyond just the direct activities to produce results.  We discuss how processes, tools and a holistic view of efforts can lead to more effective CSE.  We also discuss the importance of human factors in CSE activities, highlighting ways we can provide natural incentives toward more effective CSE.
-
+[Link to my minisymposium](http://meetings.siam.org/sess/dsp_programsess.cfm?SESSIONCODE=63588)
+[Link to another I helped organize, on modern Fortran](http://meetings.siam.org/sess/dsp_programsess.cfm?SESSIONCODE=63612)
