--- a/_talks/2018-03-26-SOS-22.md
+++ b/_talks/2018-03-26-SOS-22.md
@@ -1,16 +1,21 @@
 ---
-title: "The Trilinos Project Exascale Roadmap"
+title: "Reproducibility in Computational Science: It’s Time"
 collection: talks
 type: "Talk"
-permalink: /talks/2017-06-26-PASC-Trilinos
-venue: "Platform for Advanced Scientific Computing (PASC)"
-date: 2017-06-26
-location: "Lugano, Switzerland"
+permalink: /talks/2018-03-26-SOS-22
+venue: "SOS-22"
+date: 2017-03-26
+location: "Waikoloa Village HI, USA"
 ---
 
-[Slides available here](https://maherou.github.io/files/slides/PASC-ExaTrilinos.pdf)
+The SOS conference series is an annual forward-looking gathering focused on emerging trends in high performance computing.
 
-Computational Science and Engineering (CSE) is effective to the extent it contributes to overall scientific and engineering pursuits.  Its contributions are most tangible when delivering concrete scientific and engineering results via modeling, simulation and analysis.  At the same time, delivery of CSE results is impacted by how we develop and support the ecosystem that produced these results, including, in particular, software and people.  While delivering results is the ultimate goal of our CSE efforts, the shortest path to results is often not the most productive and sustainable.
+I have organized a panel session on reproducibility.  Speakers are myself, Torsten Hoefler, Victoria Stodden and Ivo Jimenez.
 
-In this presentation we discuss elements that impact the effectiveness of CSE efforts, beyond just the direct activities to produce results.  We discuss how processes, tools and a holistic view of efforts can lead to more effective CSE.  We also discuss the importance of human factors in CSE activities, highlighting ways we can provide natural incentives toward more effective CSE.
+The session abstract is:
 
+Reproducibility is the heart of the scientific method.  No scientific result has sustained value if it cannot be reproduced.  Even so, computational reproducibility is still maturing.  Many published computational results are not reproducible, often because not enough information from the computational experiment is retained for future use.  We do not keep, or have the ability to keep, an accounting of the full environment used to produce a result.  Furthermore, some computational experiments are not performed with enough rigor to even provide trustworthiness in the original results.
+
+The state of the computational scientific method is not necessarily a poor reflection on the community.  Instead, it reflects the complexity and tremendous variation of our computational tools and environments, and an inability to completely contain and distribute the full state of these environments. In our focus on rapid capability growth and innovation, and the related benefits, we are challenged in our ability to fully capture state and make it reusable and transferrable.
+
+In this session, we discuss new approaches and opportunities to improve reproducibility for computational science.   Recent advances in software technologies such as containers and their complementary Linux-based environments, increasing expectations for reproducibility of published results, and improvements in software quality due to highly productive software platforms such as Atlassian and GitHub enable significant productivity improvements.  We will also discuss challenges, particular those that are most relevant to boutique computing environments such as leadership computing facilities, where system access is limited and expensive, software and hardware environments are changing, and workflows are non-standard.
