--- a/_talks/2018-11-11-SC18.md
+++ b/_talks/2018-11-11-SC18.md
@@ -1,16 +1,13 @@
 ---
-title: "The Trilinos Project Exascale Roadmap"
+title: "SC18 Technical Program"
 collection: talks
-type: "Talk"
-permalink: /talks/2017-06-26-PASC-Trilinos
-venue: "Platform for Advanced Scientific Computing (PASC)"
-date: 2017-06-26
-location: "Lugano, Switzerland"
+type: "Events"
+permalink: /talks/2018-11-11-SC18
+venue: "Supercomputing 2018 (SC18)"
+date: 2018-11-11
+location: "Dallas TX, USA"
 ---
 
-[Slides available here](https://maherou.github.io/files/slides/PASC-ExaTrilinos.pdf)
+[Conference website](http://sc18.supercomputing.org)
 
-Computational Science and Engineering (CSE) is effective to the extent it contributes to overall scientific and engineering pursuits.  Its contributions are most tangible when delivering concrete scientific and engineering results via modeling, simulation and analysis.  At the same time, delivery of CSE results is impacted by how we develop and support the ecosystem that produced these results, including, in particular, software and people.  While delivering results is the ultimate goal of our CSE efforts, the shortest path to results is often not the most productive and sustainable.
-
-In this presentation we discuss elements that impact the effectiveness of CSE efforts, beyond just the direct activities to produce results.  We discuss how processes, tools and a holistic view of efforts can lead to more effective CSE.  We also discuss the importance of human factors in CSE activities, highlighting ways we can provide natural incentives toward more effective CSE.
-
+I am the chair for reproducibility in the technical program.  Guiding efforts to improve reproducibility requirements in the SC technical program.
