--- a/_teaching/2018-03-07-PP18.md
+++ b/_teaching/2018-03-07-PP18.md
@@ -1,5 +1,5 @@
 ---
-title: "Program Committee Member SIAM PP18
+title: "Program Committee Member SIAM PP18"
 collection: teaching
 type: "Service"
 permalink: /teaching/2018-03-07-SIAM-PP18
