--- a/_talks/2018-02-05-ECP-AM.md
+++ b/_talks/2018-02-05-ECP-AM.md
@@ -1,5 +1,5 @@
 ---
-title: "ECP Annual Meeting Committee Member"
+title: "ECP Annual Meeting"
 collection: talks
 type: "Event"
 permalink: /talks/2018-02-05-ECP-AM
