--- a/_talks/2018-07-04-PASC18.md
+++ b/_talks/2018-07-04-PASC18.md
@@ -1,5 +1,5 @@
 ---
-title: "Computer Science and Applied Mathematics Committee"
+title: "PASC 2018"
 collection: talks
 type: "Event"
 permalink: /talks/2018-07-04-PASC18
