--- a/_posts/2018-01-06-blog-bssw.md
+++ b/_posts/2018-01-06-blog-bssw.md
@@ -9,6 +9,10 @@ tags:
   - sustainability
 ---
 
-The computational science community is engaged in a broad adaptation of algorithms and software for next-generation computing platforms, in particular to exploit high levels of on-node concurrency.
+The Urgent Need for Improved Software Skills
+=====
+The computational science community is engaged in a broad adaptation of algorithms and software for next-generation computing platforms, in particular to exploit high levels of on-node concurrency. Never has it been so important to improve the software skills of the development community, as we work through the transformation of our algorithms and codes in this transition.
 
+BSSw is Dedicated to Developer Productivity and Software Sustainability Improvements
+-----
 The [Better Scientific Software (BSSw)](https://bssw.io) web portal is dedicated to fostering development and exchange of practices to improve developer productivity and software sustainability for computational science software.  The overarching goal of BSSw is to improve the *computational* scientific method, in service of the scientific method.
