Update and rename 2018-fall-CS373.md to 2019-fall-CS373.md

--- a/_teaching/2019-fall-CS373.md
+++ b/_teaching/2019-fall-CS373.md
@@ -2,30 +2,29 @@
 title: "CS373 - Senior Research"
 collection: teaching
 type: "Capstone Course"
-permalink: /teaching/2018-fall-CS373
+permalink: /teaching/2019-fall-CS373
 venue: "St. John's University, Department of Computer Science"
-date: 2018-01-16
+date: 2019-08-26
 location: "Collegeville, MN, USA"
 ---
 
 ### Course Information:
 - Instructor: Mike Heroux
-- Time: 1:50 pm to 4:20 pm Mondays and Fridays
-- Location: Room 218, Engel Science Center, St. John's.
+- Time: 2:10 pm to 4:20 pm Mondays and Fridays
+- Location: Room 154, Main, St. Ben's.
 
 ### Contact Info:
-- X3394 (SJU Office)
-- 320-845-7695 (Home Office)
-- 505-379-5518 (Mobile Phone)
+- +1 505 379 5518
+- <mheroux@csbsju.edu>
 
 ### Office Hours:
-- 1:20 pm to 1:50 pm on class days (please contact me prior to stopping by).
+- 1:40 pm to 2:10 pm on class days (please contact me prior to stopping by).
 - After class.
 - By appointment.
 - Any time I am in my office.
  
 ### Course Pages:
-- [Class Meeting Schedule.](https://maherou.github.io/files/CS373/2018-Fall-Class-Meeting-Schedule)
+- [Class Meeting Schedule.](https://maherou.github.io/files/CS373/2019-Fall-Class-Meeting-Schedule)
 - [Overview of Assignments and Grading.](https://maherou.github.io/files/CS373/Overview-of-Assignments-and-Grading)
 - [Course Handbook.](https://maherou.github.io/files/CS373/CSCI373CourseHandbookFifteenthEdition.pdf)
 - [Submit your regular reading assignment here.](https://goo.gl/forms/8YOiW80B462EBU0f2)
