Update learning assignment pointer

--- a/_teaching/2019-fall-CS373.md
+++ b/_teaching/2019-fall-CS373.md
@@ -22,12 +22,12 @@ location: "Collegeville, MN, USA"
 - After class.
 - By appointment.
 - Any time I am in my office.
- 
+
 ### Course Pages:
 - [Class Meeting Schedule.](https://maherou.github.io/files/CS373/2019-Fall-Class-Meeting-Schedule)
 - [Overview of Assignments and Grading.](https://maherou.github.io/files/CS373/Overview-of-Assignments-and-Grading)
 - [Course Handbook.](https://maherou.github.io/files/CS373/CSCI373CourseHandbookFifteenthEdition.pdf)
-- [Submit your regular reading assignment here.](https://goo.gl/forms/8YOiW80B462EBU0f2)
+- [Submit your regular reading assignment here.](https://forms.gle/w6gNm4K1CKypXk688)
 - [Some previous final papers are here.](https://maherou.github.io/files/CS373/SamplePapers/SOTFPaperList)
 - [Writing Evaluation Form.](https://maherou.github.io/files/CS373/CS373-Writing-Evaluation-Form)
 - [Presentation Evaluation Form.](https://maherou.github.io/files/CS373/CS373-Presentation-Evaluation-Form)
